[package]
name = "proxy-caller"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
candid = "0.10.10"
ic-agent = "0.37.1"
icrc-ledger-types = "0.1.6"
tokio = { version = "1.29", features = ["full"] }
serde = "1.0.204"
serde_json = "1.0.120"
anyhow = "1.0.86"
dotenvy = "0.15.7"
sea-orm = { version = "0.12", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
log = "0.4.22"
